Fixed layout issue in mobile version

--- a/_responsive.scss
+++ b/_responsive.scss
@@ -8,18 +8,21 @@
     font-size: 36px;
     font-weight: 700;
     color: #242d52;
+    text-align: center;
   }
 
   h2 {
     font-size: 26px !important;
     font-weight: 700;
     color: #242d52;
+    text-align: center;
   }
 
   h3 {
     font-size: 16px;
     font-weight: 700;
     color: #242d52;
+    text-align: center;
   }
 
   .nav {
@@ -43,13 +46,15 @@
   }
 
   .hero {
-    height: 90vh;
+    height: inherit;
+    padding: 50px 0px;
+
     .container {
       display: flex;
       flex-direction: column-reverse;
       justify-content: center;
-      height: 100%;
       align-items: center;
+      height: 100%;
     }
 
     &__content {
@@ -60,18 +65,68 @@
     }
 
     &__title {
-      max-width: 350px;
-      text-align: center;
+      max-width: 325px;
     }
 
     &__desc {
-      max-width: 350px;
+      max-width: 325px;
       text-align: center;
     }
 
     &__img {
       max-width: 100%;
       margin: 0px auto;
+    }
+  }
+
+  .info {
+    padding: 50px 0px;
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    &__content {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__title {
+      max-width: 325px;
+    }
+
+    &__desc {
+      max-width: 325px;
+      margin: 0px;
+      text-align: center;
+    }
+
+    &__services {
+      width: 100%;
+    }
+  }
+
+  .service {
+    display: flex;
+    justify-content: flex-end;
+    align-items: baseline;
+
+    &__order {
+      background-color: $brightRed;
+      padding: 10px 25px;
+      border-radius: 50px;
+      color: $verylightgray;
+      font-weight: 500;
+      margin-right: 25px;
+    }
+
+    &__desc {
+      max-width: 450px;
+      margin: 30px 0px 60px 0px;
     }
   }
 }
